# LWOS

./: .gitignore  CMakeLists.txt  platformio.ini
include/: ApplicationManager.h  Arch.h  DaemonRegister.h  EnergyManager.h  HW.h  ScreenSizes.h  main.h
include/application/: Application.h  HourApp.h
include/arch/esp32/: ST7735.h
include/arch/x86/: SDL2.h
include/daemon/: BLDaemon.h  Daemon.h
include/drivers/: ButtonDriver.h  DisplayDriver.h  Driver.h  GPIODriver.h  LogDriver.h  RTCDriver.h  SubscribableDriver.h
include/drivers/arduino/: ArduinoButton.h  ArduinoGPIO.h  ArduinoSerial.h  DRVPCF8563.h  PCF8563.h  ST7735.h
include/hw/: LBAND.h
include/lib/: ButtonLib.h  Lib.h  LogLib.h  OTALib.h  RTCLib.h  UILib.h  WIFILib.h
include/services/: DisplayService.h  Service.h
lib/PCF8563/src/: pcf8563.cpp  pcf8563.h
src/: ApplicationManager.cpp  DaemonRegister.cpp  EnergyManager.cpp  main.cpp
src/application/: HourApp.cpp
src/arch/esp32/: ST7735.cpp
src/arch/x86/: CMakeLists.txt  SDL2.cpp  main.cpp
src/daemon/: BLDaemon.cpp
src/drivers/: SubscribableDriver.cpp
src/drivers/arduino/: ArduinoButton.cpp  ArduinoGPIO.cpp  ArduinoSerial.cpp  DRVPCF8563.cpp  PCF8563.cpp  ST7735.cpp
src/lib/: ButtonLib.cpp  LogLib.cpp  OTALib.cpp  RTCLib.cpp  UILib.cpp  WIFILib.cpp
src/services/: DisplayService.cpp
ulp/: test.S
